5-plugin-ingresscontroller/1-service-test.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: hello
  namespace: kong-dbless
spec:
  type: NodePort
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
    nodePort: 31318
  selector:
    app: hello
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  labels:
    app: hello
  namespace: kong-dbless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: <HABOR_SERVER>/vbcs/test:0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: phuhk-secret
