5-plugin-ingresscontroller/3-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong-dbless
  annotations:
    konghq.com/strip-path: "true"

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /test
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-svc
                port:
                  number: 8080
